--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flowech-website",
+  "name": "react-threejs-3d-practice",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-three-fiber": "^6.0.13",
     "three": "^0.157.0"
   },
   "devDependencies": {
