--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.88.2",
     "@types/three": "^0.157.0",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-three-fiber": "^6.0.13",
-    "three": "^0.157.0"
+    "three": "^0.157.0",
+    "valtio": "^1.11.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
